feat(referee): add show referee's assigned race, show entries of assigned races and inspect horse entry
